<resources>
    <string name="app_name">SEG 2105 Term Project</string>

    <!-- Standard string resources for types of users. -->
    <string name="admin">Admin</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>

    <!-- For Sign Up/In page. -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <!-- For admin activity and associated dialogs. -->
    <string name="create_course">Create Course</string>
    <string name="edit_course_name">Edit Course Name</string>
    <string name="edit_course_code">Edit Course Code</string>
    <string name="delete_course">Delete Course</string>

    <string name="delete_user">Delete User</string>


    <!-- Basic keywords for admins. -->
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="welcome">Welcome</string>

    <!-- For instructor activity -->
    <string name="find_course_by_code">Load Course By Code</string>
    <string name="find_course_by_name">Load Course By Name</string>
    <string name="blank">—</string>
    <string name="un_assign">(Un)assign</string>
    <string name="edit_timetable">Edit Course Timetable</string>
    <string name="success">Success</string>
    <string name="update">Update</string>

    <!-- For timetable activity -->
    <string name="timetable">Timetable</string>
    <string name="add_timeslot">Add Timeslot</string>
    <string name="edit_timeslot">Edit Timeslot</string>
    <string name="back_to_courses">Back to courses</string>
    <string name="save_timeslot">Save Timeslot</string>
    <string name="delete_timeslot">Delete Timeslot</string>

    <string-array name="days_of_week">
        <item name="monday">Monday</item>
        <item name="tuesday">Tuesday</item>
        <item name="wednesday">Wednesday</item>
        <item name="thursday">Thursday</item>
        <item name="friday">Friday</item>
        <item name="saturday">Saturday</item>
        <item name="sunday">Sunday</item>
    </string-array>

    <!-- Labels (labelling what information is being displayed) -->
    <string name="type_of_user_label">Type of User:</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="repeat_pw_label">Repeat Password:</string>

    <string name="course_name_label">Course Name:</string>
    <string name="course_code_label">Course Code:</string>
    <string name="course_instructor_label">Course Instructor:</string>

    <string name="all_courses_label">All Courses:</string>
    <string name="selected_course_label">Selected Course:</string>
    <string name="assigned_instructor_label">Assigned Instructor:</string>
    <string name="capacity_label">Capacity:</string>
    <string name="description_label">Description:</string>
    <string name="enrolled_students_label">Enrolled Students:</string>


    <string name="enrolled_courses_label">Enrolled Courses:</string>


    <string name="timetable_edit_label">Select a timeslot to edit it:</string>
    <string name="day_label">Day:</string>
    <string name="timeslot_label">Timeslot:</string>
    <string name="day_select_label">Select day of the week:</string>
    <string name="start_time_select_label">Select the starting time:</string>
    <string name="end_time_select_label">Select the end time:</string>

    <!-- Error messages. -->
    <string name="error">Error</string>
    <string name="missing_fields">Required fields missing.</string>
    <string name="repeat_incorrect">Passwords do not match.</string>
    <string name="user_not_found">That user does not exist.</string>
    <string name="user_already_exists">That username is already being used.</string>
    <string name="password_incorrect">Incorrect password.</string>
    <string name="course_already_exists">That course code is already in use.</string>
    <string name="course_not_found">Course not found.</string>
    <string name="parameters_missing">Parameter(s) are missing.</string>
    <string name="cannot_delete_self">Cannot delete self (admin).</string>
    <string name="course_claimed">Course already claimed by another instructor.</string>
    <string name="no_course">Please load a course first.</string>
    <string name="negative_capacity">Course capacity can\'t be negative.</string>
    <string name="not_course_instructor">You are not the instructor of this course.\nYou may not change the details of this course.</string>
    <string name="timeslot_not_found">No timeslot was selected.\nThis error is not supposed to occur during natural runtime…</string>
    <string name="no_courses_on_day">No courses are active on the selected day.</string>
    <string name="timeslot_conflict">Could not enrol in course:\nThere was a timetable conflict with another enrolled course</string>
    <string name="timeslot_end_start_time">Start time needs to be before end time.</string>

    <string name="enrolled">Enrolled.</string>
    <string name="unenrolled">Unenrolled.</string>
    <string name="enroll_unenroll">Enroll / Unenroll</string>
    <string name="search_by_day">Search By Day</string>
    <string name="search_by_code">Search By Code</string>
    <string name="search_by_name">Search By Name</string>


</resources>